# WhatsAppAssistant_Service

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/config/: constants.yaml  datamodels.py
app/router/: router.py
app/services/: service_handler.py
app/services/llm_services/: llms_manager.py
app/services/llm_services/llm_service_providers/: groq_llms.py  llms_interface.py
app/utils/: constants_retriever.py  custom_enums.py  db_handler.py  logging_handler.py  singleton_handler.py
