[project]
name = "whatsappassistant-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "pyyaml>=6.0.3",
    "ruff>=0.14.9",
    "twilio>=9.8.8",
    "uvicorn>=0.38.0",
]
